<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title=" ">

        <ImageView
            android:id="@+id/id_iv_friend_add_back"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="12dp"
            android:src="@drawable/bt_back_selector" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="用户信息"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/interval_color"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:background="@color/white_color">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/id_info_picture"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:src="@mipmap/step" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/id_info_picture"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/id_tv_remark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/app_black_color"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/iv_person_sex"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/id_tv_remark"
                    android:src="@mipmap/ic_man" />

                <TextView
                    android:id="@+id/id_tv_tip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/id_tv_remark"
                    android:layout_marginTop="10dp"
                    android:text="@string/account_tip"
                    android:textColor="@color/app_black_color"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/id_info_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/id_tv_remark"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@+id/id_tv_tip"
                    android:text="Ezreal-520"
                    android:textColor="@color/app_black_color"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_tip_nike"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/id_tv_tip"
                    android:layout_marginTop="10dp"
                    android:text="@string/account_add_nick"
                    android:textColor="@color/app_black_color"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/id_info_nike"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/id_info_account"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@+id/tv_tip_nike"
                    android:text="Fate"
                    android:textColor="@color/app_black_color"
                    android:textSize="16sp" />
            </RelativeLayout>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/id_info_set_remark"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white_color"
            android:gravity="center"
            android:text="@string/set_remark_info"
            android:textColor="@color/app_black_color"
            android:textSize="18sp"
            android:visibility="visible" />

        <View
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <TextView
            android:id="@+id/tv_start_chat"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/app_blue_color"
            android:gravity="center"
            android:text="@string/add_to_contract"
            android:textColor="@color/white_color"
            android:textSize="18sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_video_chat"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@color/white_color"
            android:gravity="center"
            android:text="@string/video_chat"
            android:textColor="@color/app_blue_color"
            android:textSize="18sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/id_info_add_contract"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@color/app_blue_color"
            android:gravity="center"
            android:text="@string/add_to_contract"
            android:textColor="@color/white_color"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>