<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/id_drawerlayout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/id_off_on_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/id_tb_main_menu"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="?attr/colorPrimary"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                    app:contentInsetLeft="0dp"
                    app:contentInsetStart="0dp"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                    app:title=" ">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="趣动"
                        android:textColor="@android:color/white"
                        android:textSize="20sp" />
                </android.support.v7.widget.Toolbar>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/id_main_click_img"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:src="@mipmap/welcome" />
            </RelativeLayout>

            <!-- 无滑动自定义控件 -->
            <com.example.hsc.irunning.main.view.NoScrollViewPagerView
                android:id="@+id/id_scrollview"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="9" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/id_btn_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/main_bg_bottom"
                    android:text="@string/message_bt_string" />

                <Button
                    android:id="@+id/id_btn_friend"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/main_bg_bottom"
                    android:text="@string/friend_bt_string" />

                <Button
                    android:id="@+id/id_btn_dynamic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/main_bg_bottom"
                    android:text="@string/dynamic_bt_string" />

                <Button
                    android:id="@+id/id_btn_map"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/main_bg_bottom"
                    android:text="@string/map_bt_string"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>

        <!-- 悬浮按钮 -->
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/id_fab_main_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="50dp"
            android:src="@mipmap/location"
            app:elevation="8dp" />
    </FrameLayout>

    <!-- 左边滑出菜单 -->
    <android.support.design.widget.NavigationView
        android:id="@+id/id_nv_main_left_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/activity_main_left_context"
        app:menu="@menu/main_left_nav_menu">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:src="@mipmap/icon_system_setting" />

            <Button
                android:id="@+id/id_main_btn_setting"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:background="@drawable/main_bg_bottom"
                android:gravity="center|left"
                android:text="@string/setting_btn_string" />
        </LinearLayout>

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>