<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/interval_color"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/layout_add_friend"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white_color"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <ImageView
            android:id="@+id/iv_add_friend"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="5dp"
            android:scaleType="fitXY"
            android:src="@mipmap/friend_add_friend" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/iv_add_friend"
            android:gravity="center"
            android:text="@string/add_friend_tv_string"
            android:textColor="@color/app_black_color"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:layout_alignParentBottom="true"
            android:background="@color/interval_color" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_msg_notify"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white_color"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <ImageView
            android:id="@+id/iv_msg_notify"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="5dp"
            android:scaleType="fitXY"
            android:src="@mipmap/friend_notify" />

        <TextView
            android:id="@+id/tv_alarm"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/iv_msg_notify"
            android:gravity="center"
            android:text="@string/add_friend_verification_tv_string"
            android:textColor="@color/app_black_color"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:layout_alignParentBottom="true"
            android:background="@color/interval_color" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_group_chat"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white_color"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <ImageView
            android:id="@+id/iv_group_chat"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="5dp"
            android:scaleType="fitXY"
            android:src="@mipmap/friend_group_chat" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/iv_group_chat"
            android:gravity="center"
            android:text="@string/grop_friend_tv_string"
            android:textColor="@color/app_black_color"
            android:textSize="16sp" />
    </RelativeLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/id_srl_fragment_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ListView
            android:id="@+id/id_friend_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@color/white_color"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />
    </android.support.v4.widget.SwipeRefreshLayout>

    <LinearLayout
        android:id="@+id/id_pb_friend_progress"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:visibility="visible">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:indeterminate="true"
            android:indeterminateBehavior="repeat"
            android:indeterminateDrawable="@drawable/progress_bar_rotate"
            android:max="100" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="加载中" />
    </LinearLayout>
</LinearLayout>