<?xml version="1.0" encoding="utf-8"?><!-- 登陆界面 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    android:fitsSystemWindows="true"
    android:orientation="vertical">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/id_user_img"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="58dp"
        android:src="@mipmap/welcome" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@mipmap/icon_user_account" />

        <EditText
            android:id="@+id/id_user_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:background="@null"
            android:hint="请输入账号"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="@color/white_color"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="38dp"
        android:background="@color/hint_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="38dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@mipmap/icon_pass_word" />

        <EditText
            android:id="@+id/id_pass_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:background="@null"
            android:hint="请输入密码"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="@color/white_color"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="38dp"
        android:background="@color/hint_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="38dp"
            android:layout_weight="1"
            android:text="记住密码" />

        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="自动登录" />
    </LinearLayout>

    <TextView
        android:id="@+id/id_btn_login"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="38dp"
        android:background="@drawable/login_nol_bg"
        android:gravity="center"
        android:text="@string/login_tv_string"
        android:textColor="#1A8ECB"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/id_btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:paddingTop="20dp"
        android:text="@string/register_tv_string"
        android:textColor="@color/white_color"
        android:textSize="14sp" />

    <View
        android:layout_width="120dp"
        android:layout_height="0.8dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/white_color" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="6dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="6dp"
            android:text="@string/app_version"
            android:textColor="@color/app_blue_color" />
    </RelativeLayout>

</LinearLayout>